# py-darwin-core

./: README.md  pyproject.toml
darwin_core/: dwca.py  model.py
