[tool.poetry]
name = "py-darwin-core"
version = "0.1.0"
description = ""
authors = ["bulricht <108867473+bulricht@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
